crates/lattice-actor/tests/ui/derive/duplicate_response.rs
#[derive(lattice_actor::Request)]
#[request(response = u64, response = String)]
struct DuplicateResponse;

fn main() {}
